--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <main class="relative mt-16 sm:mt-24 lg:mt-40 pb-16 -mb-16 grid gap-16 sm:gap-24 lg:gap-40 overflow-hidden">
 
-      <section aria-labelledby="headline" class="container grid gap-8 text-center max-w-3xl">
+      <section aria-labelledby="headline" class="container grid gap-8 text-center max-w-3xl fade-up">
         <div>
           <small class="tracking-widest text-base text-gray-400 font-bold uppercase drop-shadow-text-md">How can we help
             you?</small>
@@ -74,7 +74,7 @@
           other gardening services on same day.</p>
       </section>
 
-      <section aria-labelledby="slider" class="container grid gap-8 text-center sm:text-left">
+      <section aria-labelledby="slider" class="container grid gap-8 text-center sm:text-left fade-up">
         <div class="relative">
           <div class="hidden sm:block absolute w-14 bg-accent/20 -left-4 h-full"></div>
           <!-- <div class="hidden sm:block absolute w-12 bg-accent/50 left-20 h-full"></div>  -->
@@ -120,7 +120,7 @@
       </section>
 
       <!-- Gallery -->
-      <div class="-mt-10 sm:-mt-20 lg:-mt-36 container xs:w-screen">
+      <div class="-mt-10 sm:-mt-20 lg:-mt-36 container xs:w-screen fade-up">
         <div class="flex transition-transform duration-500" data-slideContainer>
           <div class="relative w-full xs:w-auto flex-grow flex-shrink-0 xs:basis-80 pr-4" data-slide>
             <img class="object-cover h-full [@media(hover:hover)]:grayscale hover:grayscale-0 transition-all peer rounded-lg"
@@ -183,9 +183,9 @@
       <!--End of Gallery -->
 
       <section aria-labelledby="map"
-        class="container flex flex-wrap md:space-x-16 space-y-12 md:space-y-8 justify-between items-center">
-        <img src="./images/map.png" alt="Map" width="400" class="grow md:flex-1 rounded-lg" loading="lazy">
-        <div class="grid gap-4 text-center md:text-left grow md:flex-1">
+        class="container flex flex-wrap md:space-x-16 space-y-12 md:space-y-8 justify-between items-center ">
+        <img src="./images/map.png" alt="Map" width="400" class="grow md:flex-1 rounded-lg fade-up" loading="lazy">
+        <div class="grid gap-4 text-center md:text-left grow md:flex-1 fade-up">
           <div class="relative">
             <div class="hidden md:block absolute w-14 bg-accent/10 -left-4 h-full"></div>
             <small class="tracking-widest text-base text-gray-400 font-bold uppercase">Gardening Services for Any
@@ -213,7 +213,7 @@
       </section>
 
 
-      <section aria-labelledby="cta" class="container grid gap-4 text-center max-w-96">
+      <section aria-labelledby="cta" class="container grid gap-4 text-center max-w-96 fade-up">
         <div>
           <small class="tracking-widest text-base text-gray-400 font-bold uppercase">You are important to us!</small>
           <h2 id="cta" class="text-3xl font-bold tracking-wide">Get Hidden Locations</h2>
