--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         </div>
         <nav aria-label="Secondary navigation" class="text-sm flex flex-col items-center sm:items-start sm:flex-row text-center sm:text-left gap-6 justify-between md:justify-around grow basis-full md:basis-1/2 mt-2">
           <div class="grid gap-3">
-            <p class="font-bold underline decoration-accent decoration-2 underline-offset-4 tracking-wide px-2">About</p>
+            <p class="font-bold underline decoration-accent decoration-2 underline-offset-4 tracking-wide px-2">Company</p>
             <ul aria-label="About Best Garden">
               <li>
                 <a href="#" class="hover:text-accent transition-colors focus:outline-none focus-visible:ring-4 ring-offset-2 ring-offset-bkg px-2 ring-accent rounded-full">
