--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
       <!--End of Gallery -->
 
       <section aria-labelledby="map"
-        class="container flex flex-wrap md:space-x-16 space-y-12 md:space-y-8 justify-between items-center ">
+        class="container flex flex-wrap md:space-x-16 space-y-6 md:space-y-8 justify-between items-center ">
         <img src="./images/map.png" alt="Map" width="400" class="grow md:flex-1 rounded-lg fade-up" loading="lazy">
         <div class="grid gap-4 text-center md:text-left grow md:flex-1 fade-up">
           <div class="relative">
@@ -216,7 +216,7 @@
       <section aria-labelledby="cta" class="container grid gap-4 text-center max-w-96 fade-up">
         <div>
           <small class="tracking-widest text-base text-gray-400 font-bold uppercase">You are important to us!</small>
-          <h2 id="cta" class="text-3xl font-bold tracking-wide">Get Hidden Locations</h2>
+          <h2 id="cta" class="text-3xl font-bold tracking-wide">Hassle-Free Gardening</h2>
         </div>
         <p class="text-muted max-w-3xl mx-auto">Our team of experts will give you the personal attention, superior
           products and craftsmanship that is built into every landscape and every lawn care service we provide.</p>
